set "fade-right" to about me in 2 mins

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <img src="img/my-photo.jpg" alt="my photo" class="front-page-my-photo mobile-element tablet-element" />
 
-            <div class="front-page-about-me-container" data-aos="fade-left" data-aos-delay="1000">
+            <div class="front-page-about-me-container" data-aos="fade-right" data-aos-delay="1000">
 
               <p class="front-page-my-decr mobile-element">About me in 2 minutes</p>
 
