added my own pic and linked it

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="front-page-wrapper">
 
           <div class="front-page-main-info">
-            <img src="img/my-photo.jpg" alt="my photo" class="front-page-my-photo desktop-element" data-aos="fade-down" data-aos-delay="1500"/>
+            <img src="img/FullSizeRender.jpeg" alt="my photo" class="front-page-my-photo desktop-element" data-aos="fade-down" data-aos-delay="1500"/>
             <h1 class="front-page-my-name">[CloudDO]</h1>
 
             <h2 class="front-page-profession">
