added toxic: test

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="projet-item-dot"></div>
               </div>
               <img
-                src="img/projects/team/questify.jpg"
+                src="img/projects/team/toxic.png"
                 alt="quetify app"
                 class="personal-project-img"
               />
@@ -915,9 +915,9 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                   <!-- Slides -->
-                <img src="img/projects/team/questify-1.jpg" class="swiper-slide" alt="questify image 1">
-                <img src="img/projects/team/questify-2.jpg" class="swiper-slide" alt="questify image 2">
-                <img src="img/projects/team/questify-3.jpg" class="swiper-slide" alt="questify image 3">
+                <img src="img/projects/team/toxic.png" class="swiper-slide" alt="questify image 1">
+                <img src="img/projects/team/toxic2.png" class="swiper-slide" alt="questify image 2">
+                <img src="img/projects/team/toxic3.png" class="swiper-slide" alt="questify image 3">
 
               </div>
               <!-- If we need pagination -->
