--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </div>
             <p class="team-project-name">
               <i class="fas fa-laptop-code personal-project-icon"></i>
-              Technology: React.js, Node.js
+              Technology: Scratch.
             </p>
             <button class="personal-project-btn accent-btn" id="team-project-questify-btn">
               More details —
@@ -933,13 +933,13 @@
 
 
             <a
-              href="https://questify.goit.co.ua/"
+              href="https://scratch.mit.edu/projects/413452594/"
               class="project-modal-title"
-              >Questify - turn your life into a thrilling game</a
+              >Toxic - a 2D platformer.</a
             >
 
             <p class="project-modal-text">
-              Увлекательное веб-приложение, которое призвано помочь превратить рутинные задачи в увлекательные квесты и захватывающие челенджи, которые система сама ставит перед пользователем.
+              This is an interactive platformer made for playing on a computer. The platform on witch it was made is scratch. the coding was made my ArchieBoi1998, an amazing scratcher. The art/illustrations were made by me, CloudDO. 
             </p>
           </div>
         </div>
