link to scratch added

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
     
 
             <a
-              href="https://goit.ua/"
+              href="https://scratch.mit.edu/projects/387680021/"
               class="project-modal-title"
               >Escape From Mars - a 2D plaformer.</a
             >
