added my pic to mobile version

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <div class="front-page-my-info">
 
-            <img src="img/my-photo.jpg" alt="my photo" class="front-page-my-photo mobile-element tablet-element" />
+            <img src="img/FullSizeRender.jpeg" alt="my photo" class="front-page-my-photo mobile-element tablet-element" />
 
             <div class="front-page-about-me-container" data-aos="fade-right" data-aos-delay="1000">
 
