changed my skills

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </h2>
 
             <p class="front-page-description">
-              / Using HTML, CSS, JavaScript, React Native and Node.js I help to
+              / Using HTML, CSS, JavaScript, Scratch and Node.js I help to
               build websites, small and medium web apps for business
             </p>
 
@@ -156,7 +156,7 @@
                   <i class="experience-dots-item far fa-circle"></i>
                 </div>
 
-                <p class="experience-text">JavaScript</p>
+                <p class="experience-text">Scratch</p>
               </div>
 
               <div class="experience-skill">
@@ -174,7 +174,27 @@
                   <i class="experience-dots-item far fa-circle"></i>
                 </div>
 
-                <p class="experience-text">React</p>
+                <p class="experience-text">Illustration</p>
+              </div>
+
+              <div class="experience-skill">
+                <div class="experience-dots">
+                  <i
+                    class="experience-dots-item experience-dots-item-accent far fa-circle"
+                  ></i>
+                  <i
+                    class="experience-dots-item experience-dots-item-accent far fa-circle"
+                  ></i>
+                  <i
+                  class="experience-dots-item experience-dots-item-accent far fa-circle"
+                ></i>
+                <i
+                class="experience-dots-item experience-dots-item-accent far fa-circle"
+              ></i>
+                  <i class="experience-dots-item far fa-circle"></i>
+                </div>
+
+                <p class="experience-text">Drawing</p>
               </div>
 
               <div class="experience-skill">
@@ -190,23 +210,7 @@
                   <i class="experience-dots-item far fa-circle"></i>
                 </div>
 
-                <p class="experience-text">Node</p>
-              </div>
-
-              <div class="experience-skill">
-                <div class="experience-dots">
-                  <i
-                    class="experience-dots-item experience-dots-item-accent far fa-circle"
-                  ></i>
-                  <i
-                    class="experience-dots-item experience-dots-item-accent far fa-circle"
-                  ></i>
-                  <i class="experience-dots-item far fa-circle"></i>
-                  <i class="experience-dots-item far fa-circle"></i>
-                  <i class="experience-dots-item far fa-circle"></i>
-                </div>
-
-                <p class="experience-text">React Native</p>
+                <p class="experience-text">Java Script</p>
               </div>
             </div>
 
